@@ -1,3 +1,9 @@
+2002-03-21  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/tkTable.test: more icursor tests
+	* generic/tkTable.c (TableWidgetObjCmd): corrected placing the
+	icursor and retaining the position.
+
 2002-03-20  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tkTable.c:
